--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "prefix": "!",
-    "token": "NzcwNjg3ODMzNzQ3ODgyMDA0.X5hM-g.n4j5I--eB_vk0y8M8-I01kzF7Fc",
+    "token": "BOT TOKEN",
     "folder": ["meme"]
 }
