--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "prefix": "!",
-    "token": "BOT TOKEN",
-    "folder": ["meme"]
+    "token": "enter-Token-Here",
+    "folder": ["testFolder1"]
 }
