--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "prefix": "!",
-    "token": "NzcwNjg3ODMzNzQ3ODgyMDA0.X5hM-g.Bk2j3op2cg5kaA2589wee6OFdrY",
+    "token": "BOT TOKEN",
     "folder": ["meme"]
 }
