--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "prefix": "!",
-    "token": "NzcwNjg3ODMzNzQ3ODgyMDA0.X5hM-g.OWBZmYVx7e2WepZnSobgLy2f7NU",
+    "token": "BOT TOKEN",
     "folder": ["meme"]
 }
