--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "prefix": "!",
-    "token": "BOT TOKEN",
+    "token": "NzcwNjg3ODMzNzQ3ODgyMDA0.X5hM-g.lxKoSWk5y8zrUSU-GbASYqn9YvA",
     "folder": ["meme"]
 }
