--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "homepage": "https://github.com/Unknownio/SimpleBot",
   "dependencies": {
+    "EventEmitter": "^1.0.0",
     "bunyan": "^1.8.14",
+    "discord-giveaway": "^1.1.2",
+    "discord-giveaways": "^4.2.1",
     "discord.js": "^12.5.1",
     "fs": "0.0.1-security",
     "uws": "^200.0.0"
