--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
 "prefix": ".",
-"token": "NzcwNjg3ODMzNzQ3ODgyMDA0.X5hM-g.3RyBkfNyIiZ5Du745Hk7_GuYeoY",
+"token": "BOT TOKEN HERE",
 "folder": ["meme"]
 }
