--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
 "prefix": ".",
-"token": "NzcwNjg3ODMzNzQ3ODgyMDA0.X5hM-g.7Z5E9qWd1g4ZmPFwpHkuk-YNj18",
+"token": "BOT TOKEN HERE",
 "folder": ["meme"]
 }
