--- a/Light version Ad Blocker/Ad Blocker/manifest.json
+++ b/Light version Ad Blocker/Ad Blocker/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "YodaX",
+    "name": "Adblocker",
     "version": "1.1",
-    "description": "YodaX AdBlocker",
+    "description": "AdBlocker",
     "permissions": ["declarativeContent","activeTab","webRequest", "webRequestBlocking", "<all_urls>", "http://*/", "https://*/"], 
     "background": {
         "scripts": ["background.js"]
