--- a/Simple-Bot/package.json
+++ b/Simple-Bot/package.json
@@ -19,8 +19,8 @@
     "url": "https://github.com/Unknownio/SimpleBot/issues"
   },
   "homepage": "https://github.com/Unknownio/SimpleBot",
-  "dependencies": {
-    "@discordjs/opus": "^0.4.0",
+  "devDependencies": {
+    "@discordjs/opus": "^0.8.0",
     "bunyan": "^1.8.15",
     "core-js": "^3.8.3",
     "discord-player": "^3.2.1",
