--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 Simple-Bot/node_modules
 Simple-Bot/config.json
-Simple-Bot/config.json
-Simple-Bot/config.json
+New Discord Bot
+package-lock.json
+Simple-Bot/package-lock.json
+
+Simple-Bot/package-lock.json
