--- a/Simple-Bot/config.json
+++ b/Simple-Bot/config.json
@@ -1,7 +1,7 @@
 
 {
 "prefix": ".",
-"token": "",
+"token": "NzcwNjg3ODMzNzQ3ODgyMDA0.GRCYbA.6AZjcuMOXDwxyFqmv6ulAMZwYf-lbRr8ZgJWWQ",
 "folder": ["meme"],
 "CHANNEL_ID": ["UC-gxQ1O2J4TtW8PLHlBv0Ng"],
 "SERVER_CHANNEL_ID": "channel id"
